# django-template

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml
common/: models.py
config/: adapters.py  api.py  urls.py
config/settings/: base.py  local.py  production.py
features/core/: admin.py  api.py  apps.py  forms.py  models.py  schemas.py  signals.py
features/core/migrations/: 0001_initial.py
locale/ja/LC_MESSAGES/: django.po
locale/zh_Hant/LC_MESSAGES/: django.po
scripts/: __init__.py
tests/: __init__.py
users/: adapters.py  admin.py  api.py  apps.py  forms.py  managers.py  models.py  provider.py  schemas.py  signals.py
users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_managers_and_more.py  0003_user_time_zone_alter_user_avatar.py  0004_alter_user_avatar_alter_user_time_zone.py  0005_alter_user_name.py  0006_alter_user_name.py  0007_alter_user_password_alter_user_time_zone.py
utils/: storage.py
utils/common/: models.py
utils/services/: aws.py  storage.py
