[tool.poetry]
name = "planovate-server"
version = "0.1.0"
description = ""
authors = ["Planovate <info@planovateai.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.13"
Django = "^5.1.3"
ruff = "^0.7.4"
django-environ = "^0.11.2"
django-storages = "^1.14.4"
django-ninja = "^1.3.0"
django-ninja-crud = "^0.6.2"
psycopg = {extras = ["binary", "pool"], version = "^3.2.3"}
boto3 = "^1.35.67"
inflection = "^0.5.1"
pillow = "^11.0.0"
pydantic = {extras = ["email"], version = "^2.10.1"}
pydantic-extra-types = "^2.10.0"
tzdata = "^2024.2"
django-timezone-field = "^7.0"
requests = "^2.32.3"
pyjwt = "^2.10.0"
python3-openid = "^3.2.0"
cryptography = "^43.0.3"
requests-oauthlib = "^2.0.0"
django-cors-headers = "^4.6.0"
google-auth = "^2.36.0"
hiredis = "^3.0.0"
redis = "^5.2.0"
django-allauth = "^65.2.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
django-query-inspector = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
