[tool.poetry]
name = "django-template"
version = "0.1.0"
description = ""
authors = ["xLanstar <danny95624268@google.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.13"
Django = "^5.1.3"
django-environ = "^0.11.2"
django-storages = "^1.14.4"
django-ninja = "^1.3.0"
django-ninja-crud = "^0.6.2"
psycopg = { extras = ["binary", "pool"], version = "^3.2.3" }
boto3 = "^1.35.67"
inflection = "^0.5.1"
pillow = "^11.0.0"
pydantic = { extras = ["email"], version = "^2.10.1" }
pydantic-extra-types = "^2.10.0"
tzdata = "^2024.2"
django-timezone-field = "^7.0"
requests = "^2.32.3"
pyjwt = "^2.10.0"
python3-openid = "^3.2.0"
cryptography = "^43.0.3"
requests-oauthlib = "^2.0.0"
django-cors-headers = "^4.6.0"
google-auth = "^2.36.0"
hiredis = "^3.0.0"
redis = "^5.2.0"
django-allauth = { extras = ["socialaccount"], version = "^65.2.0" }

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
django-query-inspector = "^1.3.0"
ruff = "^0.8.0"
pytest-django = "^4.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [".venv", ".git", ".vscode", "media", "static", "*/migrations/*"]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
ignore = ["D100", "D104", "D106", "E501", "TRY003"]
# See Rules: https://docs.astral.sh/ruff/rules/
select = [
  "F",      # Pyflakes
  "E",      # pycodestyle - Error
  "W",      # pycodestyle - Warning
  "C901",   # McCabe complex-structure
  "I",      # isort
  "N",      # pep8-naming
  "D",      # pydocstyle
  "UP",     # pyupgrade
  "ANN",    # flake8-annotations
  "S",      # flake8-bandit
  "A",      # flake8-builtins
  "COM818", # flake8-commas - trailing-comma-on-bare-tuple
  "COM819", # flake8-commas - prohibited-trailing-comma
  "C4",     # flake8-comprehensions
  "DTZ",    # flake8-docstrings - timezone
  "T10",    # flake8-debugger
  "DJ",     # flake8-django
  "LOG",    # flake8-logging
  "G",      # flake8-logging-format
  "INP",    # flake8-no-pep420
  "PIE",    # flake8-pie
  "T20",    # flake8-print
  "PYI",    # flake8-pyi
  "RSE",    # flake8-raise
  "RET",    # flake8-return
  "SLOT",   # flake8-slot
  "SIM",    # flake8-simplify
  "TID",    # flake8-tidy-imports
  "TC",     # flake8-type-checking
  "INT",    # flake8-gettext
  "ARG",    # flake8-unused-arguments
  "PTH",    # flake8-use-pathlib
  "ERA",    # flake8-eradicate
  "PL",     # pylint
  "TRY",    # tryceratops
  "RUF",    # ruff
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
detect-same-package = true
split-on-trailing-comma = true
